TestSuite/errors/err0254.pas
type
  t1 = class 
    
    constructor := exit;
    
    procedure p1(a: set of file of record end) := exit;
    
  end;

begin end.